--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,6 +1,9 @@
 <footer class="footer">
   <nav class="navbar fixed-bottom navbar-dark bg-dark">
-    <div class="container-fluid">
+    <div class="col-2">
+      <span id="song-info" class="text-white">Nothing Playing...</span>
+    </div>
+    <div class="col-10">
       <%= audio_tag("", controls: true, id: "main_player") %>
     </div>
   </nav>
