--- a/app/views/songs/_header.html.erb
+++ b/app/views/songs/_header.html.erb
@@ -9,9 +9,11 @@
     <span class="text-white">Song Description</span>
   </div>
   <% if logged_in? %>
-    <%= link_to("New", new_song_path, class: "nav-link", remote: true) %>
-    <%= link_to("Logout", logout_path, class: "nav-link", method: :delete) %>
+    <%= link_to("New", new_song_path, class: "nav-link", data: { confirm: stopSongText }) %>
+    <%= link_to("Menu", menu_path, class: "nav-link", data: { confirm: stopSongText }) %>
+    <%= link_to("Logout", logout_path, class: "nav-link", method: :delete, 
+                                       data: { confirm: stopSongText }) %>
   <% else %>
-    <%= link_to("Login", login_path, class: "nav-link") %>
+    <%= link_to("Login", login_path, class: "nav-link", data: { confirm: stopSongText }) %>
   <% end %>
 </nav>
