--- a/app/views/menu/index.html.erb
+++ b/app/views/menu/index.html.erb
@@ -1,9 +1,12 @@
 <nav class="navbar fixed-top navbar-dark bg-dark">
-  <div class="d-none d-md-inline col-2">
+  <div class="d-none d-md-inline col-1">
     <span class="navbar-brand">Menu</span>
   </div>
   <div class="col-2">
     <span class="text-white">Song</span>
+  </div>
+  <div class="col-1">
+    <span class="text-white">Album</span>
   </div>
   <div class="col-3">
     <span class="text-white">Song Description</span>
@@ -20,9 +23,14 @@
       <div class="col-1">
         <%= image_tag(song.picture.url, height: 50, width: 50) %>
       </div>
-      <div class="col-3"><h1><%= link_to(song.name, song) %></h1></div>
-      <div class="col-3"><h3><%= song.bio %></h3></div>
-      <div class="col-3"><span class="text-white"><%= song.tag_list %></span></div>
+      <div class="col-2"><h3><%= link_to(song.name, song) %></h3></div>
+      <div class="col-1"><h3><%= song.album_list %></h3></div>
+      <div class="col-3">
+        <span class="text-white"><%= song.bio %></span>
+      </div>
+      <div class="col-3">
+        <span class="text-white"><%= song.tag_list %></span>
+      </div>
       <div class="col-1">
           <%= link_to("Edit", edit_song_path(song), class: "btn btn-secondary") %>
       </div>
