--- a/app/views/songs/_form.html.erb
+++ b/app/views/songs/_form.html.erb
@@ -16,6 +16,10 @@
       <%= f.text_field :artist, placeholder: @song.artist, class: "form-control" %>
     </div>
     <div class="field">
+      <%= f.label :Album %>
+      <%= f.text_field :album_list, placeholder: "No album", class: "form-control" %>
+    </div>
+    <div class="field">
       <%= f.label :Description %>
       <%= f.text_area :bio, placeholder: "Description", class: "form-control" %>
     </div>
