--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,4 +1,4 @@
-<footer class="footer">
+<footer id="footer" class="footer" data-turbolinks-permanent>
   <nav class="navbar fixed-bottom navbar-dark bg-dark">
     <div class="col-2">
       <span id="song-info" class="text-white">Nothing Playing...</span>
