--- a/app/views/songs/_form.html.erb
+++ b/app/views/songs/_form.html.erb
@@ -18,6 +18,8 @@
     <div class="field">
       <%= f.label :Album %>
       <%= f.text_field :album_list, placeholder: "No album", class: "form-control" %>
+      <%= f.label :Position %>
+      <%= f.text_field :num %>
     </div>
     <div class="field">
       <%= f.label :Description %>
