--- a/app/views/songs/_header.html.erb
+++ b/app/views/songs/_header.html.erb
@@ -1,6 +1,8 @@
 <nav class="navbar fixed-top navbar-dark bg-dark">
   <div class="d-none d-md-inline col-2">
-    <span class="navbar-brand">All Songs</span>
+    <span class="navbar-brand">
+      <%= link_to("All Songs", songs_path) %>
+    </span>
   </div>
   <div class="col-3">
     <span class="text-white">Song</span>
@@ -9,11 +11,11 @@
     <span class="text-white">Song Description</span>
   </div>
   <% if logged_in? %>
-    <%= link_to("New", new_song_path, class: "nav-link", data: { confirm: stopSongText }) %>
-    <%= link_to("Menu", menu_path, class: "nav-link", data: { confirm: stopSongText }) %>
+    <%= link_to("New", new_song_path, class: "nav-link") %>
+    <%= link_to("Menu", menu_path, class: "nav-link") %>
     <%= link_to("Logout", logout_path, class: "nav-link", method: :delete,
                                        data: { confirm: stopSongText }) %>
   <% else %>
-    <%= link_to("Login", login_path, class: "nav-link", data: { confirm: stopSongText }) %>
+    <%= link_to("Login", login_path, class: "nav-link") %>
   <% end %>
 </nav>
