Add extra padding to bottom

--- a/app/assets/stylesheets/songs.scss
+++ b/app/assets/stylesheets/songs.scss
@@ -12,7 +12,7 @@ $nicegray: rgb(167, 167, 167);
 
 body {
   background-color: $offblack;
-  padding: 60px 15px;
+  padding: 60px 15px 80px;
 }
 
 #main_player { 
