--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -4,7 +4,7 @@
       <span id="song-info" class="text-white">Nothing Playing...</span>
     </div>
     <div class="col-10">
-      <%= audio_tag("", controls: true, id: "main_player") %>
+      <%= audio_tag('', controls: true, id: "main_player") %>
     </div>
   </nav>
 </footer>
