--- a/app/views/songs/_album_cloud.html.erb
+++ b/app/views/songs/_album_cloud.html.erb
@@ -1,19 +1,18 @@
 <div class="row my-2">
   <div class="col-md-10 offset-md-1">
     <div class="row">
-      <div class="col-1"><h3>Albums: </h3></div>
-        <div class="col">
-          <% @albums.each do |album| %>
-            <% if params[:album] == album.name %>
-              <% active = "outline-" %>
-            <% else %>
-              <% alb = album.name %>
-            <% end %>
-            <%= link_to(album.name, 
-                        songs_path(merge_params(album: alb)), 
-                        class: "btn btn-#{active}primary")%>
+      <div class="col-auto"><h3>Albums: </h3></div>
+      <div class="col">
+        <% @albums.each do |album| %>
+          <% if params[:album] == album.name %>
+            <% active = "outline-" %>
+          <% else %>
+            <% alb = album.name %>
           <% end %>
-        </div>
+          <%= link_to(album.name, 
+                      songs_path(merge_params(album: alb)), 
+                      class: "btn btn-#{active}primary")%>
+        <% end %>
       </div>
     </div>
   </div>
